fix: native build and test (gvm23)
fix: set `java.home` property to value in `JAVA_HOME` env if available
fix: fail if no `JAVA_HOME` env var is set (needed to jartool/compiler)
fix: add `--enable-preview` flags to `java` and `javac` calls as needed
fix: switch to cached threadpool because of a bug with system properties
fix: add metadata for resources used by java compiler/jar tool

This PR targets stable GraalVM, which is JDK 23. Because of a bug in the
current GVM 23 release, execution is switched to using a cached thread-
pool.

GraalVM issue: https://github.com/oracle/graal/issues/9939
Fixes and closes: https://github.com/oracle/graal/issues/10679

Tested against GraalVM 23 with:
javac build/Manual.java;
native-image build.Manual \
    -H:ResourceConfigurationFiles=./config/reachability-metadata.json;
./build.manual;

Signed-off-by: Sam Gammon <sam@elide.dev>